kubernetes/flux/add-ons/webhook/github/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: flux-system
spec:
  ingressClassName: "cilium"
  rules:
    - host: "gh-hook.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
  tls:
    - hosts:
        - "gh-hook.${SECRET_DOMAIN}"
      secretName: gh-hook-tls
